# dogebot

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml
dapr/: secretstore.yaml  statestore.yaml
src/: auth.rs  cli.rs  client.rs  main.rs
src/auth/: slack_auth.rs
src/cli/: opt.rs
src/client/: dapr_client.rs
