[package]
name = "dogebot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
rocket = "0.5.0-rc.1"
dapr = "0.7.3-alpha.0"
bincode = "1.3.3"
slack-rust = "0.0.1-alpha"
structopt = "0.3.26"
regex = "1.5.5"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.79"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.56"
url = "2.2.2"